# Engine

./: .gitignore  CMakeLists.txt
Games Engine/: CMakeLists.txt  Main.cpp
Games Engine/Graphics/: Material.hpp  Shader.cpp  Shader.hpp  Vertex.hpp
Games Engine/Graphics/Renderables/: Mesh.hpp
Games Engine/Graphics/Renderer/: ForwardRenderer3D.cpp  ForwardRenderer3D.hpp  RenderCommand.hpp  Renderable.hpp  Renderer.hpp
Games Engine/Math/: Vector2.hpp
Games Engine/System/: Assert.hpp  Event.cpp  Event.hpp  Types.hpp  Window.cpp  Window.hpp
Shaders/: test.fs  test.vs
